Bruk samme måte å konvertere resultatet på